style.css
/* ... */
.contact_form textarea {
    display: flex;
    padding: 24px;
    background-color: transparent;
    width: 100%;
    border: none;
    height: 244px;
    overflow-wrap: break-word;
    resize: none;


}

input:focus-visible {
    outline-color: none;
    outline-style: none;
}

textarea:focus-visible {
    outline-color: none;
    outline-style: none;
}

.error-message {
    display: flex;
    font-family: "Inter", sans-serif;
    font-weight: 700;
    font-size:14px;
    height: 24px;
    position: relative;
    bottom: 8px;
    right: 8px;
    justify-content: end;
    align-items: end;
    visibility: hidden;
    color: red;
}



.contact_form-button {
    max-width: 244px;
}

.paragraphTexts {
    font-style: italic;
    max-width: 600px;
    margin-top: 24px;
    margin-bottom: 72px;
    font-size: 16px;
    line-height: 24px;
}

/* Modal Window Styles */
.modalMenu {
    display: none;
    position: fixed;
    z-index: 2;
    left: 0;
    top: 0;
    bottom: 0;
    width: 100%;
    height: 100dvh;
    background-color: #FFE27C;
    animation: modalSliderTopToBottom 0.3s ease-in;
}

.modalContentWrapper {
    display: flex;
    flex-direction: column;
    gap: 116px;
    height: 100dvh;
    margin-bottom: 72px;
}

.modalMenuContent {
    background-color: #FFE27C;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
  
    
}

.modal_navigation_buttons {
    display: flex;
    flex-direction: column;
}

.modal_navigation_buttons a {
    display: flex;
    justify-content: space-between;

}

.close p {
    font-size: 16px;
}

.close {
    padding: 0;
    color: black;
    display: flex;
    flex-direction: row;
    width: 100%;
    line-height: 72px;
    position: absolute;
    bottom: 0px;
    left:  0px;
    align-items: center;
    justify-content: center;
    gap: 12px;
    float: right;
    font-size: 28px;
    background-color: transparent;
}

.close:hover,
.close:focus {
    color: black;
    background-color: #EBCE68;
    ;
    text-decoration: none;
    cursor: pointer;
}

.contact_form {
    margin-bottom: 72px;
}

.email_sending_form button {
    height: 242px;
    justify-content: center;
}

.email_sending_form button:hover {
    color: black;
    background-color: hsl(0, 0%, 95%);
}

@keyframes navigationSlider {
    0% {
        bottom: -70px;
        display: none;
    }

    100% {
        bottom: 8px;
        display: flex;
    }
}

@keyframes navigationSlider-reverse {
    0% {
        bottom: 8px;
        display: flex;
    }

    100% {
        bottom: -70px;
        display: none;
    }
}

@keyframes navigationSliderTopToBottom {
    0% {
        top: -70px;
        display: none;
    }

    100% {
        top: 8px;
        display: flex;
    }
}

@keyframes navigationSliderTopToBottom-reverse {

    0% {
        top: 8px;
        display: flex;
    }

    100% {
        top: -70px;
        display: none;
    }
}

@keyframes modalSliderTopToBottom {
    0% {
        top: 100vh;
        display: none;
    }

    100% {
        bottom: 0px;
        display: block;
    }
}

@keyframes modalSliderTopToBottom-reverse {


    0% {
        bottom: 0px;
        display: block;
    }

    100% {
        top: 150vh;
        display: none;
    }
}

/* Desktop L */
@media (min-width: 1191px) {

    .content-container {
        width: 1144px;
    }
}

/* Desktop S */
@media (max-width: 1190px) {

    .content-container {
        width: 952px;
    }

    .header_content-wrapper {
        flex-direction: column;
        justify-content: space-between;
    }

    .navigation {
        flex-direction: row;
        justify-content: space-between;
        width: 100%;
    }

    .projectText {
        width: 143px;
    }

    .project img {

        width: 709px;
    }

    .decorLineForProject {
        width: 100px;
    }


    .decorLineForTeamPic {
        display: flex;
        align-items: center;
        content: "";
        height: 1px;
        background-color: #010101;
    }

}


/* Tablet L */
@media (max-width: 1000px) {

    .content-container {
        width: 760px;
    }

    .project img {
        width: 517px;
    }

    .decorLineForProject {
        width: 100px;
    }

    .decorLineForTeamPic {
        display: flex;
        align-items: center;
        content: "";
        height: 1px;
        background-color: #010101;
    }
}
/* ... */

